--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "dependency_detective"
-version = "0.1.3"
+version = "0.2.0"
 edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.49", features = ["derive"] }
 owo-colors = "4.2.3"
+thiserror = "2.0.17"
