--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5.49", features = ["derive"] }
 owo-colors = "4.2.3"
+serde = { version = "1.0.228", features = ["derive"] }
 thiserror = "2.0.17"
+toml = "0.9.8"
